Update 103.3 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.3 Perform basic file management/103.3 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.3 Perform basic file management/103.3 Lesson 1.md
@@ -317,11 +317,295 @@ $ rmdir -p parents/children
 Это удалит структуру каталогов `parents/children`. Обратите внимание, что если какой-либо из каталогов не пуст, они не будут удалены.
 
 
-### Рекурсивное управление файлами и каталогами
+### Рекурсивное манипулирование файлами и каталогами
 
-Чтобы управлять каталогом и его содержимым, вам необходимо применить рекурсию. Рекурсия означает выполнение действия и повторение этого действия по всему дереву каталогов. В Linux параметры `-r` или `-R` или `--recursive` обычно связаны с рекурсией. 
+Чтобы управлять каталогом и его содержимым, вам необходимо применить *рекурсию*. Рекурсия означает выполнение действия и повторение этого действия по всему дереву каталогов. В Linux параметры `-r` или `-R` или `--recursive` обычно связаны с рекурсией. 
 
 Следующий сценарий поможет вам лучше понять рекурсию: 
 
 Вы перечисляете содержимое каталога `student`, который содержит два подкаталога `level 1` и `level 2` и файл с именем `frank`. Применяя рекурсию, команда `ls` выводит список студентов, то есть `level 1`, `level 2` и `frank`, но на этом не заканчивается. Он в равной степени войдет в подкаталоги `level 1` и `level 2`, перечислит их содержимое и так далее по дереву каталогов.
 
+
+### Рекурсивный листинг с `ls -R`
+
+`ls -R` используется для вывода списка содержимого каталога вместе с его подкаталогами и файлами.
+
+```console
+$ ls -R mydirectory
+mydirectory/:
+file1   newdirectory
+
+mydirectory/newdirectory:
+```
+
+В приведенном выше листинге отображена директория `mydirectory`, включая все ее содержимое. Вы можете заметить, что `mydirectory` содержит подкаталог `newdirectory` и файл `file1`. `newdirectory` пуст, поэтому содержимое не отображается. В общем, чтобы перечислить содержимое каталога, включая его подкаталоги, используйте:
+
+```console
+ls -R DIRECTORY_NAME
+```
+
+Добавление косой черты в `DIRECTORY_NAME` ни на что не влияет:
+
+```console
+$ ls -R animal
+```
+
+похоже на
+
+```console
+$ ls -R animal/
+```
+
+
+### Рекурсивное копирование с помощью `cp -r`
+
+`cp -r` (или `-R` или `--recursive`) позволяет копировать каталог вместе со всеми его подкаталогами и файлами.
+
+```console
+$ tree mydir
+mydir
+|_file1
+|_newdir
+    |_file2
+    |_insidenew
+        |_lastdir
+
+
+3 directories, 2 files
+$ mkdir newcopy
+$ cp mydir newcopy
+cp: omitting directory 'mydir'
+$ cp -r mydir newcopy
+* tree newcopy
+newcopy
+|_mydir
+    |_file1
+    |_newdir
+        |_file2
+        |_insidenew
+            |_lastdir
+
+4 directories, 2 files
+```
+
+В листинге выше мы видим, что при попытке скопировать `mydir` в `newcopy`, используя `cp` без `-r`, система отображает сообщение `cp`: пропуская каталог `mydir`. Однако при добавлении опции `-r` все содержимое `mydir`, включая его самого, копируется в `newcopy`. 
+
+Для копирования каталогов и подкаталогов используйте:
+
+```console
+cp -r SOURCE DESTINATION
+```
+
+
+### Рекурсивное удаление с помощью `rm -r`
+
+`rm -r` удалит каталог и все его содержимое (подкаталоги и файлы).
+
+>Будьте очень осторожны с параметром `-r` или комбинацией опций `-rf` при использовании с командой `rm`. Рекурсивная команда удаления в важном системном каталоге может сделать систему непригодной для использования. Используйте рекурсивную команду удаления только в том случае, если абсолютно уверены, что содержимое каталога безопасно удалить с компьютера.
+
+При попытке удалить каталог без использования `-r` система сообщит об ошибке:
+
+```console
+$ rm newcopy/
+rm: cannot remove 'newcopy/': Is a directory
+$ rm -r newcopy/
+```
+
+Вы должны добавить `-r`, как во второй команде, чтобы удаление вступило в силу.
+
+>Вам может быть интересно, почему мы не используем `rmdir` в этом случае. Между двумя командами есть небольшая разница. `rmdir` удастся удалить, только если данный каталог пуст, тогда как `rm -r` можно использовать независимо от того, пуст этот каталог или нет.
+
+Добавьте параметр `-i` для поиска подтверждения перед удалением файла:
+
+```console
+$ rm -ri mydir/
+rm: remove directory 'mydir/'?
+```
+
+Система запрашивает перед попыткой удалить `mydir`.
+
+
+### Подстановка файлов и подстановочные знаки
+
+*Подстановка файлов* - это функция, предоставляемая оболочкой Unix/Linux для представления нескольких имен файлов с помощью специальных символов, называемых *подстановочными знаками*. Подстановочные знаки - это, по сути, символы, которые могут использоваться для замены одного или нескольких символов. Они позволяют, например, показать все файлы, начинающиеся с буквы `A`, или все файлы, заканчивающиеся на буквы `.conf`. 
+
+Подстановочные знаки очень полезны, поскольку их можно использовать с такими командами, как `cp`, `ls` или `rm`. 
+
+Ниже приведены некоторые примеры подстановки файлов: 
+
+`rm *`  
+Удалить все файлы в текущем рабочем каталоге. 
+
+`ls l?st`  
+Перечислите все файлы, имена которых начинаются с `l`, за которым следует любой одиночный символ и заканчиваются `st`. 
+
+`rmdir [а-я]*`  
+Удалите все каталоги, название которых начинается с буквы.
+
+
+### Типы подстановочных знаков
+
+В Linux в качестве подстановочных знаков можно использовать три символа: 
+
+`*` (звездочка)  
+что представляет собой ноль, одно или несколько вхождений любого символа. 
+
+`?` (вопросительный знак)  
+который представляет собой единственное вхождение любого символа. 
+
+`[]` (символы в квадратных скобках)  
+который представляет любое вхождение символа(ов), заключенного в квадратные скобки. Можно использовать разные типы символов, будь то цифры, буквы и другие специальные символы. Например, выражение `[0-9]` соответствует всем цифрам.
+
+
+### Звездочка
+
+Звездочка (`*`) соответствует нулю, одному или нескольким вхождениям любого символа. 
+
+Например:
+
+```console
+$ find /home -name *.png
+```
+
+В результате будут найдены все файлы с расширением `.png`, например `photo.png`, `cat.png`, `frank.png`. Команда `find` будет подробнее рассмотрена в следующем уроке. 
+
+По аналогии:
+
+```console
+$ ls lpic-*.txt
+```
+
+перечислит все текстовые файлы, которые начинаются с символов `lpic-`, за которыми следует любое количество символов и заканчиваются на `.txt`, например `lpic-1.txt` и `lpic-2.txt`. 
+
+Подстановочный знак звездочки можно использовать для управления (копирования, удаления или перемещения) всего содержимого каталога:
+
+```console
+$ cp -r animal/* forest
+```
+
+В этом примере все содержимое `animal` копируется в `forest`. 
+
+Обычно для копирования всего содержимого каталога мы используем:
+
+```console
+cp -r SOURCE_PATH/* DEST_PATH
+```
+
+где `SOURCE_PATH` можно не указывать, если мы уже находимся в требуемом каталоге. 
+
+Звездочка, как и любой другой подстановочный знак, может многократно использоваться в одной команде и в любой позиции:
+
+```console
+$ rm *ate*
+```
+
+Имена файлов с префиксом нуля, одно или несколько вхождений любого символа, за которыми следуют буквы `ate` и заканчивающиеся нулем, одно или несколько вхождений любого символа будут удалены.
+
+
+### Знак вопроса
+
+Вопросительный знак (`?`) cоответствует *единственному* появлению символа. 
+
+Рассмотрим листинг:
+
+```console
+$ ls
+last.txt    lest.txt    list.txt    third.txt   past.txt
+```
+
+Чтобы вернуть только файлы, которые начинаются с `l`, за которым следует любой одиночный символ и символы `st.txt`, мы используем подстановочный знак вопросительного знака (`?`):
+
+```console
+$ ls l?st.txt
+last.txt    lest.txt    list.txt
+```
+
+Отображаются только файлы `last.txt`, `lest.txt` и `list.txt`, соответствующие заданным критериям. 
+
+По аналогии,
+
+```console
+$ ls ??st.txt
+last.txt    lest.txt    list.txt    past.txt
+```
+
+выходные файлы с префиксом из двух любых символов, за которым следует текст `st.txt`.
+
+
+### Заключенные в скобки персонажи
+
+Подстановочные знаки в квадратных скобках соответствуют любому появлению символа(ов), заключенного в квадратные скобки:
+
+```console
+$ ls l[aef]st.txt
+last.txt    lest.txt
+```
+
+Эта команда перечислит все файлы, начинающиеся с `l`, за которым следует *любой* из символов набора `aef` и заканчивающиеся `st.txt`. 
+
+Квадратные скобки также могут принимать диапазоны:
+
+```console
+$ ls l[a-z]st.txt
+last.txt    lest.txt    list.txt
+```
+
+Это выводит все файлы с именами, начинающимися с `l`, за которой следует любая строчная буква в диапазоне от `a` до `z` и заканчивающаяся `st.txt`. 
+
+В квадратных скобках также можно указать несколько диапазонов:
+
+```console
+$ ls
+student-1A.txt  student-2A.txt  student-3.txt
+$ ls student-[0-9][A-Z].txt
+student-1A.text student-2A.txt
+```
+
+В списке отображается школьный каталог со списком зарегистрированных учеников. Перечислить только тех студентов, регистрационные номера которых соответствуют следующим критериям:
+* начать со `student-` 
+* за которым следует число и символ верхнего регистра 
+* и закончить на `.txt`
+
+
+### Комбинирование подстановочных знаков
+
+Подстановочные знаки можно комбинировать следующим образом:
+
+```console
+$ ls
+last.txt    lest.txt    list.txt    third.txt   past.txt
+$ ls [plf]?st* 
+list.txt    last.txt    past.txt
+```
+
+Первый компонент подстановочного знака (`[plf]`) соответствует любому из символов `p`, `l` или `f`. Второй компонент подстановочного знака (`?`) Соответствует любому одиночному символу. Третий компонент подстановочного знака (`*`) соответствует нулю, одному или нескольким вхождениям любого символа. 
+
+Существуют и другие подстановочные знаки, такие как подстановочный знак плюс (`+`), который используется для представления символа(ов), который встречается один или несколько раз:
+
+```console
+$ ls
+file1.txt file.txt file23.txt fisher.txt fom23.txt
+$ ls f*[0-9]+.txt
+file1.txt file23.txt fom23.txt
+```
+
+Предыдущая команда отображает все файлы, которые начинаются с буквы `f`, за которой следует любой набор букв, по крайней мере, одно вхождение цифры и заканчивается на `.txt`. Обратите внимание, что файл `file.txt` не отображается, поскольку он не соответствует этому критерию.
+
+
+## Упражнения для закрепления
+
+
+
+## Упражнения на размышление
+
+
+
+## Резюме
+
+
+
+
+## Ответы на упражнения для закрепления
+
+
+## Ответы на упражнения для размышления
