Update 103.3 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.3 Perform basic file management/103.3 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.3 Perform basic file management/103.3 Lesson 1.md
@@ -4,7 +4,7 @@
 |:----------------|:------------------------------------------|
 | **Версия:**     | 5.0                                       |
 | **Тема:**       | 103 Команды GNU и Unix                    |
-| **Задача:**     | 103.3 Выполнить базовое управление файлами |
+| **Задача:**     | 103.3 Выполнение базовых манипуляций с файлами |
 | **Урок:**       | 1 из 2                                    |
 
 
@@ -594,15 +594,94 @@ file1.txt file23.txt fom23.txt
 
 ## Упражнения для закрепления
 
+1. Рассмотрим список ниже:
+```console
+$ ls -lh
+total 60K
+drwxr-xr-x  2   frank   frank   4.0K    Apr 1   2018    Desktop
+drwxr-xr-x  2   frank   frank   4.0K    Apr 1   2018    Documents
+drwxr-xr-x  2   frank   frank   4.0K    Apr 1   2018    Downloads
+-rw-r--r--  1   frank   frank     21    Sep 7   12:59   emp_name
+-rw-r--r--  1   frank   frank     20    Sep 7   13:03   emp_salary
+-rw-r--r--  1   frank   frank   8.8K    Apr 1   2018    examples.desktop
+-rw-r--r--  1   frank   frank     10    Sep 1   2018    file1
+-rw-r--r--  1   frank   frank     10    Sep 1   2018    file2
+drwxr-xr-x  2   frank   frank   4.0K    Apr 1   2018    Music
+drwxr-xr-x  2   frank   frank   4.0K    Apr 1   2018    Pictures
+drwxr-xr-x  2   frank   frank   4.0K    Apr 1   2018    Public
+drwxr-xr-x  2   frank   frank   4.0K    Apr 1   2018    Templates
+drwxr-xr-x  2   frank   frank   4.0K    Apr 1   2018    Videos
+```
+
+* Что символ `d` представляет в выводе? 
+* Почему размеры даны в удобочитаемом формате? 
+* Какой была бы разница в выводе, если бы `ls` использовалось без аргументов?
+
+2. Рассмотрим команду ниже:
+
+```console
+$ cp /home/frank/emp_name /home/frank/backup
+```
+
+* Что произойдет с файлом `emp_name`, если эта команда будет выполнена успешно? 
+* Если бы `emp_name` был каталогом, какую опцию нужно добавить в `cp` для выполнения команды? 
+* Если теперь изменить `cp` на `mv`, каких результатов вы ожидаете?
+
+3. Рассмотрим листинг:
+
+```console
+$ ls
+file1.txt file2.txt file3.txt file4.txt
+```
+
+Какой подстановочный знак поможет удалить все содержимое этого каталога?
+
+4. На основании предыдущего списка, какие файлы будут отображаться с помощью следующей команды?
+
+```console
+$ ls file*.txt
+```
+
+5. Завершите команду, добавив соответствующие цифры и символы в квадратные скобки, в которых будет перечислено все приведенное выше содержимое:
+
+```console
+$ ls file[].txt
+```
 
 
 ## Упражнения на размышление
 
+1. В своем домашнем каталоге создайте файлы с именами `dog` и `cat`. 
+2. По-прежнему в своем домашнем каталоге создайте каталог с именем `animal`. Переместите `dog` и `cat` в `animal`. 
+3. Перейдите в папку `Documents` в вашем домашнем каталоге и внутри создайте каталог `backup`. 
+4. Скопируйте `animal` и его содержимое в `backup`. 
+5. Переименуйте `animal` в `backup` на `animal.bkup`. 
+6. Каталог `/home/lpi/databases` содержит множество файлов, включая: `db-1.tar.gz`, `db-2.tar.gz` и `db-3.tar.gz`. Какую команду можно использовать для вывода списка только файлов, упомянутых выше? 
+7. Рассмотрим листинг:
+
+```console
+$ ls
+cne1222223.pdf cne12349.txt cne1234.pdf
+```
+
+Какая команда удалит только файлы `pdf` при использовании одного символа подстановки?
 
 
 ## Резюме
 
+В этом уроке мы изучили, как просмотреть содержимое каталога с помощью команды `ls`, как копировать (`cp`) файлы и папки, а также как их перемещать (`mv`). Мы также рассмотрели, как можно создать новый каталог с помощью команды `mkdir`. Также обсуждались команды для удаления файлов (`rm`) и папок (`rmdir`). 
 
+В этом уроке вы также узнали о подстановке файлов и подстановочных знаках. Подстановка файлов используется для представления нескольких имен файлов с помощью специальных символов, называемых подстановочными знаками. Основные символы подстановки и их значение: 
+
+`?` (вопросительный знак)  
+представляет собой единственное вхождение символа. 
+
+`[ ]` (квадратных скобках)  
+представляет любое вхождение символа(ов), заключенного в квадратные скобки. 
+
+`*` (звездочка) представляет ноль, одно или несколько вхождений любого символа. 
+
+Вы можете комбинировать любые эти подстановочные знаки в одном заявлении.
 
 
 ## Ответы на упражнения для закрепления
