Update 103.3 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.3 Perform basic file management/103.3 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.3 Perform basic file management/103.3 Lesson 1.md
@@ -686,5 +686,119 @@ cne1222223.pdf cne12349.txt cne1234.pdf
 
 ## Ответы на упражнения для закрепления
 
+**1. Рассмотрим список ниже:**
+```console
+$ ls -lh
+total 60K
+drwxr-xr-x  2   frank   frank   4.0K    Apr 1   2018    Desktop
+drwxr-xr-x  2   frank   frank   4.0K    Apr 1   2018    Documents
+drwxr-xr-x  2   frank   frank   4.0K    Apr 1   2018    Downloads
+-rw-r--r--  1   frank   frank     21    Sep 7   12:59   emp_name
+-rw-r--r--  1   frank   frank     20    Sep 7   13:03   emp_salary
+-rw-r--r--  1   frank   frank   8.8K    Apr 1   2018    examples.desktop
+-rw-r--r--  1   frank   frank     10    Sep 1   2018    file1
+-rw-r--r--  1   frank   frank     10    Sep 1   2018    file2
+drwxr-xr-x  2   frank   frank   4.0K    Apr 1   2018    Music
+drwxr-xr-x  2   frank   frank   4.0K    Apr 1   2018    Pictures
+drwxr-xr-x  2   frank   frank   4.0K    Apr 1   2018    Public
+drwxr-xr-x  2   frank   frank   4.0K    Apr 1   2018    Templates
+drwxr-xr-x  2   frank   frank   4.0K    Apr 1   2018    Videos
+```
+
+* Что символ `d` представляет в выводе?  
+d - это символ, обозначающий каталог.
+
+* Почему размеры даны в удобочитаемом формате?  
+Из-за опции -h.
+
+* Какой была бы разница в выводе, если бы `ls` использовалось без аргументов?
+Будут предоставлены только имена каталогов и файлов.
+
+
+**2. Рассмотрим команду ниже:**  
+
+```console
+$ cp /home/frank/emp_name /home/frank/backup
+```
+
+* Что произойдет с файлом `emp_name`, если эта команда будет выполнена успешно? 
+`emp_name будет` скопировано в `backup`.
+
+* Если бы `emp_name` был каталогом, какую опцию нужно добавить в `cp` для выполнения команды? 
+`-r`
+
+* Если теперь изменить `cp` на `mv`, каких результатов вы ожидаете?
+`emp_name` будет перемещено в `backup`. Его больше не будет в домашнем каталоге пользователя `frank`.
+
+**3. Рассмотрим листинг:**
+
+```console
+$ ls
+file1.txt file2.txt file3.txt file4.txt
+```
+
+**Какой подстановочный знак поможет удалить все содержимое этого каталога?**  
+Звездочка `*`.
+
+**4. На основании предыдущего списка, какие файлы будут отображаться с помощью следующей команды?**
+
+```console
+$ ls file*.txt
+```
+
+Все они, поскольку символ звездочки представляет любое количество символов.
+
+**5. Завершите команду, добавив соответствующие цифры и символы в квадратные скобки, в которых будет перечислено все приведенное выше содержимое:**
+
+```console
+$ ls file[].txt
+```
+
+`file[0-9].txt`
+
 
 ## Ответы на упражнения для размышления
+
+**1. В своем домашнем каталоге создайте файлы с именами `dog` и `cat`.**  
+```console
+$ touch dog cat
+```
+
+**2. По-прежнему в своем домашнем каталоге создайте каталог с именем `animal`. Переместите `dog` и `cat` в `animal`.**  
+```console
+$ mkdir animal
+$ mv dog cat -t animal/
+```
+
+**3. Перейдите в папку `Documents` в вашем домашнем каталоге и внутри создайте каталог `backup`.**   
+```console
+$ cd ~/Documents
+$ mkdir backup
+```
+
+**4. Скопируйте `animal` и его содержимое в `backup`.**  
+```console
+$ cp -r animal ~/Documents/backup
+```
+
+**5. Переименуйте `animal` в `backup` на `animal.bkup`.**  
+```console
+$ mv animal/ animal.bkup
+```
+
+**6. Каталог `/home/lpi/databases` содержит множество файлов, включая: `db-1.tar.gz`, `db-2.tar.gz` и `db-.tar.gz`. Какую команду можно использовать для вывода списка только файлов, упомянутых выше?** 
+```console
+$ ls db-[1-3].tar.gz
+```
+
+**7. Рассмотрим листинг:**  
+
+```console
+$ ls
+cne1222223.pdf cne12349.txt cne1234.pdf
+```
+
+**Какая команда удалит только файлы `pdf` при использовании одного символа подстановки?**  
+```console
+$ rm cne*.pdf
+```
