Update 103.3 Lesson 2.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.3 Perform basic file management/103.3 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.3 Perform basic file management/103.3 Lesson 2.md
@@ -1,4 +1,4 @@
-# 103.3 Урок 1
+# 103.3 Урок 2
 
 | **Сертификат:** | LPIC-1                                    |
 |:----------------|:------------------------------------------|
@@ -10,4 +10,33 @@
 
 ## Как искать файлы
 
-По мере использования машины количество и размер файлов постепенно увеличивается. Иногда бывает сложно найти конкретный файл. К счастью, Linux предоставляет функцию find для быстрого поиска файлов. find использует следующий синтаксис:
+По мере использования машины количество и размер файлов постепенно увеличивается. Иногда бывает сложно найти конкретный файл. К счастью, Linux предоставляет функцию `find` для быстрого поиска файлов. `find` использует следующий синтаксис:
+
+```console
+find STARTING_PATH OPTIONS EXPRESSION
+```
+
+`STARTING_PATH`  
+определяет каталог, в котором начинается поиск. 
+
+`OPTIONS`  
+контролирует поведение и добавляет определенные критерии для оптимизации процесса поиска. 
+
+`EXPRESSION`  
+определяет поисковый запрос.
+
+```console
+$ find . -name "myfile.txt"
+./myfile.txt
+```
+
+Начальный путь в этом случае - текущий каталог. Параметр `-name` указывает, что поиск основан на имени файла. `myfile.txt` - это имя файла для поиска. При использовании подстановки файлов убедитесь, что выражение заключено в кавычки:
+
+```console
+$ find /home/frank -name "*.png"
+/home/frank/Pictures/logo.png
+/home/frank/screenshot.png
+```
+
+Эта команда находит все файлы, оканчивающиеся на `.png`, начиная с каталога `/home/frank/` и ниже. Если вы не понимаете, как используется звездочка (`*`), это описано в предыдущем уроке.
+
