Update 103.3 Lesson 2.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.3 Perform basic file management/103.3 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.3 Perform basic file management/103.3 Lesson 2.md
@@ -40,3 +40,78 @@ $ find /home/frank -name "*.png"
 
 Эта команда находит все файлы, оканчивающиеся на `.png`, начиная с каталога `/home/frank/` и ниже. Если вы не понимаете, как используется звездочка (`*`), это описано в предыдущем уроке.
 
+
+## Использование критериев для ускорения поиска
+
+Используйте `find` для поиска файлов по *типу*, *размеру* или *времени*. Указав один или несколько вариантов, вы получите желаемые результаты за меньшее время. 
+
+Переключение на поиск файлов по типу включает: 
+
+`-type f`  
+поиск файлов. 
+
+`-type d`  
+поиск по каталогу. 
+
+`-type l`  
+поиск по символической ссылке.
+
+```console
+$ find . -type d -name "example"
+```
+
+Эта команда находит все каталоги в текущем каталоге и ниже, которые имеют имя `example`. 
+
+Другие критерии, которые можно использовать с поиском, включают: 
+
+`-name`  
+выполняет поиск по заданному имени. 
+
+`-iname`  
+поиск по имени, однако регистр не важен (т. е. тестовый пример `myFile` похож на `MYFILE`). 
+
+`-not`  
+возвращает те результаты, которые не соответствуют тесту. 
+
+`-maxdepth N`  
+выполняет поиск как в текущем каталоге, так и в подкаталогах на `N` уровней.
+
+
+## Поиск файлов по времени изменения
+
+`find` также позволяет фильтровать иерархию каталогов в зависимости от того, когда файл был изменен:
+
+```console
+$ sudo find / -name "*.conf" -mtime 7
+/etc/logrotate.conf
+```
+
+Эта команда будет искать все файлы во всей файловой системе (начальный путь - это корневой каталог, т.е. `/`), которые заканчиваются символами `.conf` и были изменены за последние семь дней. Эта команда потребует повышенных привилегий для доступа к каталогам, начинающимся с основы структуры каталогов системы, поэтому здесь используется `sudo`. Аргумент, переданный в `mtime`, представляет количество дней с момента последнего изменения файла.
+
+
+## Поиск файлов по размеру
+
+`find` также может находить файлы по размеру. Например, поиск файлов размером более 2 ГБ в `/var`:
+
+```console
+$ sudo find /var -size +2G
+/var/lib/libvirt/images/debian10.qcow2
+/var/lib/libvirt/images/rhel8.qcow2
+```
+
+Параметр `-size` отображает файлы размеров, соответствующих переданному аргументу. Вот некоторые примеры аргументов: 
+
+`-size 100b`  
+файлы размером ровно 100 байт. 
+
+`-size +100к`  
+файлы размером более 100 килобайт. 
+
+`-sizw -20M`  
+файлы размером менее 20 мегабайт. 
+
+`-size +2G`  
+файлы размером более 2 гигабайт.
+
+>Чтобы найти пустые файлы, мы можем использовать: `find . -size 0b` или `find . -empty`.
+
