Update 103.3 Lesson 2.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.3 Perform basic file management/103.3 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.3 Perform basic file management/103.3 Lesson 2.md
@@ -115,3 +115,216 @@ $ sudo find /var -size +2G
 
 >Чтобы найти пустые файлы, мы можем использовать: `find . -size 0b` или `find . -empty`.
 
+
+## Действия по набору результатов
+
+После завершения поиска можно выполнить действие с результирующим набором с помощью `-exec`:
+
+```console
+$ find . -name "*.conf" -exec chmod 644 '{}' \;
+```
+
+Это фильтрует каждый объект в текущем каталоге (`.`) и ниже на предмет имен файлов, заканчивающихся на `.conf`, а затем выполняет команду `chmod 644` для изменения прав доступа к файлам для результатов. 
+
+Пока не беспокойтесь о значении `'{}' \;` как это будет обсуждаться позже.
+
+
+## Использование `grep` для фильтрации файлов на основе содержимого
+
+`grep` используется для поиска вхождения ключевого слова. 
+
+Рассмотрим ситуацию, когда нам нужно найти файлы по содержимому:
+
+```console
+$ find . -type f -exec grep "lpi" '{}' \; -print
+./.bash_history
+Alpine/M
+helping/M
+```
+
+Это будет искать каждый объект в текущей иерархии каталогов (`.`), который является файлом (`-type f`), а затем выполняет команду `grep «lpi»` для каждого файла, который удовлетворяет условиям. Файлы, соответствующие этим условиям, печатаются на экране (`-print`). Фигурные скобки (`{}`) заменяют результаты поиска. `{}` Заключены в одинарные кавычки (`'`), чтобы избежать передачи файлов `grep` с именами, содержащими специальные символы. Команда `-exec` заканчивается точкой с запятой (`;`), которую следует экранировать (`\;`), чтобы избежать интерпретации оболочкой. 
+
+Добавление опции `-delete` в конец выражения приведет к удалению всех совпадающих файлов. Эту опцию следует использовать, если вы уверены, что результаты соответствуют только тем файлам, которые вы хотите удалить. 
+
+В приведенном ниже примере `find` находит все файлы в иерархии, начиная с текущего каталога, а затем удаляет все файлы, которые заканчиваются символами `.bak`:
+
+```console
+$ find . -name "*.bak" -delete
+```
+
+## Архивирование файлов
+
+### Команда `tar` (архивирование и сжатие)
+
+Команда `tar`, сокращение от «ленточный архив(атор)», используется для создания архивов `tar` путем преобразования группы файлов в архив. Архивы создаются таким образом, чтобы можно было легко перемещать или создавать резервные копии группы файлов. Думайте о `tar` как об инструменте, который создает клей, на который файлы можно прикреплять, группировать и легко перемещать. 
+
+`tar` также имеет возможность извлекать архивы `tar`, отображать список файлов, включенных в архив, а также добавлять дополнительные файлы в существующий архив. Синтаксис команды `tar` выглядит следующим образом:
+
+```console
+tar [OPERATION_AND_OPTIONS] [ARCHIVE_NAME] [FILE_NAME(S)]
+```
+
+`OPERATION`  
+Разрешен и обязателен только один аргумент операции. Наиболее часто используемые операции: 
+`--create (-c)`  
+Создает новый `tar-архив`. 
+
+`--extract (-x)`  
+Извлеките весь архив или один или несколько файлов из архива. 
+
+`--list (-t)`  
+Отобразите список файлов, включенных в архив. 
+
+`OPTIONS`  
+Наиболее часто используемые варианты: 
+
+`--verbose (-v)`  
+Показать файлы, обрабатываемые командой `tar`. 
+
+`--file=archive=name (-f arhive-name`)  
+Задает имя файла архива. 
+
+`ARCHIVE_NAME`  
+Имя архива.  
+
+`FILE_NAME(S)`  
+Список извлекаемых файлов, разделенных пробелами. Если не указано иное, извлекается весь архив.
+
+
+### Создание архива
+
+Допустим, у нас есть каталог с именем `stuff` в текущем каталоге, и мы хотим сохранить его в файл с именем `archive.tar`. Мы бы запустили следующую команду:
+
+```console
+$ tar -cvf archive.tar stuff
+stuff/
+stuff/service.conf
+```
+
+Вот что на самом деле означают эти переключатели: 
+
+`-c`  
+Создает архив. 
+
+`-v`  
+Отображает прогресс в терминале при создании архива, также известный как «подробный» режим. `-v` в этих командах всегда необязателен, но полезен. 
+
+`-f`  
+Позволяет указать имя файла архива. Обычно для архивации одного каталога или одного файла в Linux мы используем:
+
+```console
+tar -cvf NAME-OF-ARCHIVE.tar /PATH/TO/DIRECTORY-OR-FILE
+```
+
+>tar работает рекурсивно. Он будет выполнять необходимые действия с каждым последующим каталогом внутри указанного каталога.
+
+Чтобы заархивировать несколько каталогов одновременно, мы перечисляем все каталоги, ограничивая их пробелом в разделе `/PATH/TO/DIRECTORY-OR-FILE`:
+
+```console
+$ tar -cvf archive.tar stuff1 stuff2
+```
+
+Это создаст архив `stuff1` и `stuff2` в `archive.tar`.
+
+
+### Извлечение архива
+
+Мы можем извлечь архив с помощью `tar`:
+
+```
+$ tar -xvf archive.tar
+stuff/
+stuff/service.conf
+```
+
+Это распакует содержимое `archive.tar` в текущий каталог. 
+
+Эта команда аналогична команде создания архива, использованной выше, за исключением переключателя `-x`, который заменяет переключатель `-c`. 
+
+Чтобы извлечь содержимое архива в определенный каталог, мы используем `-C`:
+
+```console
+$ tar -xvf archive.tar -C /tmp
+```
+
+Это распакует содержимое `archive.tar` в каталог `/tmp`.
+
+```console
+$ ls /tmp
+stuff
+```
+
+### Сжатие при помощи `tar`
+
+Команда GNU `tar`, включенная в дистрибутивы Linux, может создать архив `.tar`, а затем сжать его с помощью сжатия `gzip` или `bzip2` одной командой:
+
+```console
+$ tar -czvf name-of-archive.tar.gz stuff
+```
+
+Эта команда создаст сжатый файл с использованием алгоритма `gzip` (`-z`). 
+
+Хотя сжатие `gzip` чаще всего используется для создания файлов `.tar.gz` или `.tgz`, `tar` также поддерживает сжатие `bzip2`. Это позволяет создавать сжатые файлы `bzip2`, часто называемые файлами `.tar.bz2`, `.tar.bz` или `.tbz`. 
+
+Для этого заменим `-z` для `gzip` на `-j` для `bzip2`:
+
+```console
+$ tar -cjvf name-of-archive.tar.bz stuff
+```
+
+Чтобы распаковать файл, мы заменяем `-c` на `-x`, где `x` означает «извлечь»:
+
+```console
+$ tar -xzvf archive.tar.gz
+```
+
+`gzip` работает быстрее, но обычно сжимает немного меньше, поэтому вы получаете файл несколько большего размера. `bzip2` работает медленнее, но сжимает немного больше, поэтому вы получаете файл несколько меньшего размера. Однако в целом `gzip` и `bzip2` - это практически одно и то же, и оба работают одинаково. 
+
+В качестве альтернативы мы можем применить сжатие `gzip` или `bzip2`, используя команду `gzip` для сжатия `gzip` и команду `bzip` для сжатия `bzip`. Например, чтобы применить сжатие `gzip`, используйте:
+
+```console
+gzip FILE-TO-COMPRESS
+```
+
+`gzip`  
+создает сжатый файл с тем же именем, но с окончанием `.gz`. 
+
+`gzip`  
+удаляет исходные файлы после создания сжатого файла. 
+
+Команда `bzip2` работает аналогичным образом. 
+
+Для распаковки файлов мы используем либо `gunzip`, либо `bunzip2` в зависимости от алгоритма, используемого для сжатия файла.
+
+
+### Команда `cpio`
+
+`cpio` означает «копировать, копировать». Он используется для обработки архивных файлов, таких как файлы `*.cpio*` или `.tar`. 
+
+`cpio` выполняет следующие операции: 
+* Копирование файлов в архив. 
+* Извлечение файлов из архива. 
+ 
+Он берет список файлов со стандартного ввода (в основном вывод из `ls`). 
+
+Для создания `cpio` архива мы используем:
+
+```console
+$ ls | cpio -o > archive.cpio
+```
+
+Параметр `-o` указывает `cpio` на создание вывода. В этом случае создается выходной файл `archive.cpio`. 
+
+Команда `ls` выводит список содержимого текущего каталога, которое необходимо заархивировать. 
+
+Для распаковки архива мы используем:
+
+```console
+$ cpio -id < archive.cpio
+```
+
+Параметр `-i` используется для извлечения. Параметр `-d` создаст папку назначения. Символ `<` представляет стандартный ввод. Входной файл для извлечения - `archive.cpio`.
+
+
+### Команда `dd`
+
