Update 103.3 Lesson 2.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.3 Perform basic file management/103.3 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.3 Perform basic file management/103.3 Lesson 2.md
@@ -328,3 +328,152 @@ $ cpio -id < archive.cpio
 
 ### Команда `dd`
 
+`dd` копирует данные из одного места в другое. Синтаксис командной строки `dd` отличается от многих других программ Unix, он использует синтаксис `option=value` для своих параметров командной строки, а не стандартные форматы GNU `-option value` или `--option=value`:
+
+```console
+$ dd if=oldfile of=newfile
+```
+
+Эта команда скопирует содержимое `oldfile` в `newfile`, где `if=` - это входной файл, а `of=` относится к выходному файлу.
+
+>Команда `dd` обычно ничего не выводит на экран, пока команда не завершится. Если указать параметр `status=progress`, консоль отобразит объем работы, выполненной командой. Например: `dd status=progress if=oldfile of=newfile`.
+
+`dd` также используется для преобразования данных в верхний/нижний регистр или записи непосредственно на блочные устройства, такие как `/dev/sdb`:
+
+```console
+$ dd if=oldfile of=newfile conv=ucase
+```
+
+Это скопирует все содержимое старого файла в новый файл и сделает весь текст заглавными.
+
+Следующая команда создаст резервную копию всего жесткого диска, расположенного в `/dev/sda`, в файл с именем `backup.dd`:
+
+```console
+$ dd if=/dev/sda of=backup.dd bs=4096
+```
+
+
+## Упражнения для закрепления
+
+1. Рассмотрим следующий список:
+
+```console
+$ find /home/frank/Documents/ -type d
+/home/frank/Documents/
+/home/frank/Documents/animal
+/home/frank/Documents/animal/domestic
+/home/frank/Documents/animal/wild
+```
+
+* Какие файлы выводит эта команда? 
+* В каком каталоге начинается поиск?
+
+2. Пользователь желает сжать свою резервную папку. Он использует следующую команду:
+
+```console
+$ tar cvf /home/frank/backup.tar.gz /home/frank/dir1
+```
+
+Какой опции не хватает для сжатия резервной копии с использованием алгоритма gzip?
+
+
+## Упражнения на размышление
+
+1. Как системный администратор, он должен выполнять регулярные проверки на предмет удаления объемных файлов. Эти объемные файлы находятся в `/var` и имеют расширение `.backup`. 
+
+* Запишите команду, используя `find`, чтобы найти эти файлы: 
+
+* Анализ размеров этих файлов показывает, что они варьируются от `100МБ` до `1ГБ`. Завершите предыдущую команду этой новой информацией, чтобы вы могли найти эти файлы резервных копий размером от `100МБ` до `1ГБ`: 
+
+* Наконец, завершите эту команду действием удаления, чтобы эти файлы были удалены: 
+
+2. В каталоге `/var` есть четыре файла резервных копий:
+
+```console
+db-jan-2018.backup
+db-feb-2018.backup
+db-march-2018.backup
+db-apr-2018.backup
+```
+
+* Используя `tar`, укажите команду, которая создаст архивный файл с именем `db-first-Quarter-2018.backup.tar`:
+
+* Используя `tar`, укажите команду, которая будет создавать архив и сжимать его с помощью `gzip`. Обратите внимание, что имя результирующего файла должно заканчиваться на `.gz`:
+
+
+## Резюме
+
+В этом разделе вы узнали: 
+* Как найти файлы с `find`. 
+* Как добавить критерии поиска на основе времени, типа или размера файла, указав аргумент `find`. 
+* Как действовать на возвращенный набор. 
+* Как архивировать, сжимать и распаковывать файлы с помощью `tar`. 
+* Обработка архивов с помощью `cpio`. 
+* Копирование файлов с помощью `dd`.
+
+
+## Ответы на упражнения для закрепления
+
+**1. Рассмотрим следующий список:**  
+
+```console
+$ find /home/frank/Documents/ -type d
+/home/frank/Documents/
+/home/frank/Documents/animal
+/home/frank/Documents/animal/domestic
+/home/frank/Documents/animal/wild
+```
+
+* Какие файлы выводит эта команда?  
+Директории
+
+* В каком каталоге начинается поиск?
+`/home/frank/Documents/`
+
+**2. Пользователь желает сжать свою резервную папку. Он использует следующую команду:**
+
+```console
+$ tar cvf /home/frank/backup.tar.gz /home/frank/dir1
+```
+
+**Какой опции не хватает для сжатия резервной копии с использованием алгоритма gzip?**  
+Какой опции не хватает для сжатия резервной копии с использованием алгоритма `gzip`? Опция `-z`.
+
+
+## Ответы на упражнения для размышления
+
+**1. Как системный администратор, он должен выполнять регулярные проверки на предмет удаления объемных файлов. Эти объемные файлы находятся в `/var` и имеют расширение `.backup`.**  
+
+* Запишите команду, используя `find`, чтобы найти эти файлы: 
+```console
+$ find /var -name *.backup
+```
+
+* Анализ размеров этих файлов показывает, что они варьируются от `100МБ` до `1ГБ`. Завершите предыдущую команду этой новой информацией, чтобы вы могли найти эти файлы резервных копий размером от `100МБ` до `1ГБ`: 
+```console
+$ find /var -name *.backup -size +100M -size -1000M
+```
+
+* Наконец, завершите эту команду действием удаления, чтобы эти файлы были удалены: 
+```console
+$ find /var -name *.backup -size +100M -size -1000M -delete
+```
+
+**2. В каталоге `/var` есть четыре файла резервных копий:**
+
+```console
+db-jan-2018.backup
+db-feb-2018.backup
+db-march-2018.backup
+db-apr-2018.backup
+```
+
+* Используя `tar`, укажите команду, которая создаст архивный файл с именем `db-first-Quarter-2018.backup.tar`:
+```console
+$ tar -cvf db-first-quarter-2018.backup.tar db-jan-2018.backup db-feb-2018.backup db-march-2018.backup db-apr-2018.backup
+```
+
+* Используя `tar`, укажите команду, которая будет создавать архив и сжимать его с помощью `gzip`. Обратите внимание, что имя результирующего файла должно заканчиваться на `.gz`:
+```console
+$ tar -zcvf db-first-quarter-2018.backup.tar.gz db-jan-2018.backup db-feb-2018.backup db-march-2018.backup db-apr-2018.backup
+```
